compiler/tests/fail/stack_allocation/x86-64/bad_alignment.jazz
// FIXME: double check
export fn main (reg u64 i) -> reg u64 {
  stack u64[4] s;
  reg ptr u64[2] r;

  r = s[u32 i:4];
  reg u64 res = r[1];

  return res;
}
